# pubmarine-submarine

firmware/: code.py  controls.py  pins.py
pcb/: #auto_saved_files#  DRV8873H.kicad_sch  VNH7070AS.lib  design-block-lib-table  fp-lib-table  pubmarine-submarine.kicad_dru  pubmarine-submarine.kicad_pcb  pubmarine-submarine.kicad_pro  pubmarine-submarine.kicad_sch  pubmarine-submarine.kicad_sym  pubmarine-submarine.step  sym-lib-table  untitled.kicad_sch  ~pubmarine-submarine.kicad_sch.lck
pcb/DRV8873H.kicad_block/: DRV8873H.kicad_pcb  DRV8873H.kicad_sch
pcb/Pump.kicad_block/: Pump.kicad_pcb  Pump.kicad_sch
pcb/VNH7070AS.kicad_block/: VNH7070AS.kicad_sch
pcb/jlcpcb/: project.db
pcb/jlcpcb/gerber/: pubmarine-submarine-CuBottom.gbr  pubmarine-submarine-CuTop.gbr  pubmarine-submarine-EdgeCuts.gbr  pubmarine-submarine-MaskBottom.gbr  pubmarine-submarine-MaskTop.gbr  pubmarine-submarine-NPTH.drl  pubmarine-submarine-PTH.drl  pubmarine-submarine-SilkBottom.gbr  pubmarine-submarine-SilkTop.gbr
pcb/pubmarine-submarine.pretty/: MPU-6050_Module.kicad_mod  RPi_Pico_SMD_TH.kicad_mod  TerminalBlock_Altech_AK300-2_P5.00mm.kicad_mod
web/: CLAUDE.md  README.md  generate_cert.py  main.py  pyproject.toml
web/app/: gpio.py  main.py  plumbing.py  protocol.py  serial.py  serial_client.py
web/certs/: cert.pem  key.pem
web/configs/: mediamtx.yml
web/static/: subsanwich.mtl
web/static/css/: gamepad.css  style.css
web/static/js/: artificial-horizon.js  gamepad.js  submarine-3d.js
web/templates/: base.html  counter.html  gamepad.html  index.html
